# sloth

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: lint.yaml  pull_request_template.md
sloth/dag/: flow.py  task.py
sloth/validation/: basic.py
